manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: marketing
  namespace: marketing
  labels:
    app: marketing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: marketing
  template:
    metadata:
      labels:
        app: marketing
    spec:
      containers:
        - name: marketing
          image: "trueberryless/marketing:main-3d57606389cd5dca323e3f1978608a5768dc0390"
          imagePullPolicy: Always
