manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: marketing
    namespace: marketing
    annotations:
        cert-manager.io/issuer: acme-issuer
spec:
    selector:
        app: marketing
    ports:
        - name: http
          port: 80
