manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: marketing
  namespace: marketing
spec:
  rules:
    - host: marketing.trueberryless.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: marketing
                port:
                  number: 80

  tls:
    - hosts:
        - marketing.trueberryless.org
      secretName: marketing
